# dataharness

./: .gitignore  AGENTS.md  CODEMAP.md  GEMINI.md  Issues.md  Lessons.md  PLAN.md  README.md  pyproject.toml
app/: app.json
datasets/: README.md  generate_employee_workspace_fixture.py
docs/: debug-textual-dev.md  observability.md
docs/app/: analyst-behaviour.md  compaction-behaviour.md  doctor-behaviour.md  services.md  tools-vs-commands.md
references/archive/: 2026-04-21-llm-data-harness-design-sub1.md  2026-04-21-llm-data-harness-design-sub2.md  2026-04-21-llm-data-harness-design.md  2026-04-22-llm-data-harness-design-sub3.md  2026-04-22-local-data-analysis-harness-design.md  2026-04-22-local-data-analysis-harness-orchestrator-and-control-loop.md  2026-04-22-local-data-analysis-harness-overview.md  2026-04-22-local-data-analysis-harness-state-memory-and-doctor.md  2026-04-22-local-data-analysis-harness-tui-and-verification.md  2026-04-22-local-data-analysis-harness-worker-and-execution.md  2026-04-23-data-analysis-app-logic.md
references/expected-specs/: 2026-04-17-00-openai-agents-migration-design.md  2026-04-17-01-llama-cpp-agents-model.md  2026-04-17-02-model-core-refactor.md  2026-04-17-03-hragent-tools.md  2026-04-17-04-specialist-agents.md  2026-04-17-05-triage-routing.md  2026-04-17-06-pipeline-orchestrator.md  2026-04-17-07-ui-telemetry-integration.md  2026-04-17-08-packaging-sandbox-runtime.md  2026-04-17-09-knowledge-agent.md  2026-04-17-10-data-analyst-agent.md  (+8 more)
scripts/: build_app.sh
src/: cli.py
src/app/: __init__.py  (+3 more)
tests/: test_cli.py
(+330 files in other folders)
