[project]
name = "dataharness"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "llama-cpp-python",
  "numpy",
  "pydantic>=2.0",
  "psutil",
  "textual>=8.2.4",
]

[project.scripts]
dataharness = "cli:main"

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runtime", "src/worker", "src/harness", "src/app", "src/observability"]

[tool.hatch.build.targets.wheel.force-include]
"src/cli.py" = "cli.py"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
